# abletonosc-client

./: README.md  claude.md  first_song.py  main.py  pyproject.toml
abletonosc_client/: __init__.py  client.py
osc_client/: __init__.py  chords.py  clip.py  clip_slot.py  device.py  scene.py  song.py  track.py  view.py
osc_client/tests/: test_chords.py  test_clip.py  test_clip_slot.py  test_scales.py  test_scene.py  test_song.py  test_track.py  test_view.py
scripts/: lofi_song.py
