[project]
name = "abletonosc-client"
version = "1.1.0"
description = "Python OSC client wrapper for AbletonOSC - control Ableton Live via OSC"
readme = "README.md"
license = "MIT"
authors = [
    {name = "ldraney"}
]
keywords = ["ableton", "osc", "music", "midi", "live"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"
dependencies = [
    "python-osc>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/ldraney/abletonosc-client"
Repository = "https://github.com/ldraney/abletonosc-client"
Issues = "https://github.com/ldraney/abletonosc-client/issues"

[tool.poetry]
packages = [{include = "abletonosc_client"}]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["abletonosc_client/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
